Description
Implementation details from here: http://www.microsoft-questions.com/microsoft/Platform-SDK-Shell/32763916/problem-trapping-shopenfolderandselectitems.aspx
SHOpenFolderAndSelectItems looks for an existing shell window (using =
IShellWindows::FindWindowSW). If it can't find one, it creates a new one =
(using ShellExecuteEx) and waits for it to appear. Then it queries for =
IWebBrowserApp, calls get_Document, queries the document object for =
IShellFolderViewDual, and finally calls SelectItem.
Note that afaik opening a new file browser window and waiting for it is done with an undocumented function in shdocvw.
Attachments
Issue Links
- blocks
-
CORE-7109 shell32: shortcut properties - find target
-
- Resolved
-
- is blocked by
-
CORE-9368 CLSID_ShellWindows is unimplemented.
-
- Open
-
- is duplicated by
-
CORE-12259 In Mozilla Firefox "open containing folder" from library right click menu does nothing
-
- Resolved
-
-
CORE-11251 [SHELL] Everything Search Engine 1.3.4.686 fails to open containing folder of file
-
- Resolved
-
- relates to
-
CORE-16391 SHOpenFolderAndSelectItems(), can not 'open containing folder' of a search result
-
- Resolved
-
-
CORE-7238 SHOpenFolderAndSelectItems failure when Windows Server 2003 Explorer replaced
-
- Resolved
-