[SHELL32] - Hackplement SHOpenFolderAndSelectItems by using the /select parameter of explorer.exe and selecting only the first of the requested items. - Implement the "Find Target" button in the properties dialog of shortcuts to use SHOpenFolderAndSelectItems so as we can test it. Based on the patch of Joachim Henze (reactosfanboy). CORE-9367

svn path=/trunk/; revision=73159